# docmind

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: main.py
app/agent/: aggregator.py  chain.py  human_loop.py  langgraph_agent.py  multi_agent.py  prompt.py  react_agent.py  supervisor.py  tools.py
app/api/: routes.py
app/core/: config.py  exceptions.py  logger.py  utils.py
app/mcp/: server.py
app/mcp/servers/: __init__.py  document_parser.py  epub_parser.py  obsidian_sync.py  pdf_parser.py
app/nlp/: __init__.py  keywords.py  kg.py  segmenter.py  templates.py  terms.py
app/services/: chat_service.py
cv/: interview-prompt.md
test/: test_aggregator.py  test_chat.py  test_core.py  test_document.py  test_langgraph.py  test_mcp.py  test_multi_agent.py  test_nlp.py  test_react.py  test_supervisor.py  test_templates.py  test_unit.py
