[project]
name = "docmind"
version = "0.1.0"
description = "基于 LangChain + GLM 的智能文档摘要服务，支持 API 和 MCP 协议"
authors = [{name = "Your Name", email = "your@email.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.4",
    "langchain-core>=0.1.10",
    "langchain-community>=0.0.16",
    "zhipuai>=2.1.5.20250825",
    "trafilatura>=1.8.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=5.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
